# kira-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md
kira-agent-roadmap/: 00-design-principles.md  01-kai-capability-map.md  README.md
openspec/: config.yaml
scripts/: README.md  kira  (+1 more)
server/: README.md  pyproject.toml
server/src/kira_server/: __init__.py  context.py  main.py  memory.py  observability.py  project_knowledge.py  safety.py  transcript.py
server/src/kira_server/api/: __init__.py  routes.py
server/src/kira_server/core/: __init__.py  events.py  runs.py
server/src/kira_server/graph_runtime/: __init__.py  agent_loop.py  events.py  hitl.py  runtime.py  specs.py  state.py  streaming.py  toolnode.py  validation.py
server/src/kira_server/providers/: __init__.py  base.py  config.py  fixture.py  openai_compatible.py  selection.py
server/src/kira_server/skills/: __init__.py  builtin.py  install.py  packages.py  registry.py
server/src/kira_server/storage/: __init__.py  database.py  failure.py  idempotency.py  retry.py
server/src/kira_server/tooling/: __init__.py  hitl.py  policy.py  project_files.py  python_exec.py  registry.py  results.py  shell_exec.py
server/tests/: test_agent_loop.py  test_graph_api.py  test_graph_runtime.py  test_health.py  test_hitl.py  test_memory_system.py  test_openai_provider.py  test_provider_config.py  test_provider_selection.py  test_reliable_api.py  test_skills.py  test_stage06_skill_project_context.py  test_stage09_observability.py  test_storage.py  test_tools.py  test_transcript_core.py
(+339 files in other folders)
