[project]
name = "kira-agent-server"
version = "0.1.0"
description = "Local FastAPI backend for Kira Agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kira_server"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
